Closed Bug 878515 Opened 12 years ago Closed 12 years ago

getTextAtOffset line boundary may return a wrong line in case of soft line breaks

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: surkov, Assigned: surkov)

References

Details

(Keywords: access)

Attachments

(1 file)

Attached patch patchSplinter Review
patch contains a couple of fixes for test_atcaretoffset.html (wrongly expected results)
Attachment #757060 - Flags: review?(trev.saunders)
Assignee: nobody → surkov.alexander
Blocks: 882281
No longer blocks: getText*a11y
Comment on attachment 757060 [details] [diff] [review] patch canceling review, replaced by bug 882281
Attachment #757060 - Flags: review?(trev.saunders)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: