Bug 878515 - getTextAtOffset line boundary may return a wrong line in case of soft line breaks, r=tbsaunde